# backend/controllers/user.controller.go
@@ -45,7 +45,7 @@ func GetMe(c *fiber.Ctx) error {
 // Get User by Id func get user infomation by id
 // @Description get user infomation by id
 // @Summary get user infomation by id
-// @Tags Uer
+// @Tags User
 // @Accept json
 // @Produce json
 // @Param id path string true "User ID"
@@ -72,7 +72,7 @@ func GetUserById(c *fiber.Ctx) error {
 // Update user detail
 // @Description update user detail
 // @Summary update user detail
-// @Tags Uer
+// @Tags User
 // @Accept json
 // @Produce json
 // @Param Payload body models.UserUpdate true "User Update Data"
@@ -129,7 +129,80 @@ func UpdateUser(c *fiber.Ctx) error {
 	return c.Status(fiber.StatusOK).JSON(models.ApiResponse(isSuccess, fiber.Map{"data": gin.H{"user": models.FilterUserRecord(&updateUser)}}))
 }
 
-func DeleteUser(c *fiber.Ctx) error {
+// Update user detail by user id
+// @Description update user detail by user id
+// @Summary update user detail by user id
+// @Tags User
+// @Accept json
+// @Produce json
+// @Param Payload body models.UserUpdate true "User Update Data"
+// @Success 200 {array} models.User
+// @Router /users/update/{id} [patch]
+func UpdateUserById(c *fiber.Ctx) error {
+	var payload *models.UserUpdate
+	var isSuccess bool = false
+
+	id, err := uuid.Parse(c.Params("id"))
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(models.ApiResponse(isSuccess, fiber.Map{"message": err.Error()}))
+	}
+
+	if err := c.BodyParser(&payload); err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(models.ApiResponse(isSuccess, fiber.Map{"message": err.Error()}))
+	}
+
+	errors := models.ValidateStruct(payload)
+	if errors != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(models.ApiResponse(isSuccess, fiber.Map{"message": errors}))
+	}
+
+	var oldUser models.User
+
+	result := dbconn.DB.First(&oldUser, "id = ?", id)
+
+	if result.RowsAffected == 0 {
+		return c.Status(fiber.StatusNotFound).JSON(models.ApiResponse(isSuccess, fiber.Map{"message": "the user ID is not found"}))
+	}
+
+	var hashedPassword string
+	// not update password
+	if payload.Password == "" {
+		hashedPassword = oldUser.Password
+	} else {
+		hashedPassword = utils.HashPassword(payload.Password)
+	}
+
+	updateUser := models.User{
+		UserName:  payload.UserName,
+		FirstName: payload.FirstName,
+		LastName:  payload.LastName,
+		Email:     strings.ToLower(payload.Email),
+		Phone:     payload.Phone,
+		Password:  hashedPassword,
+		Role:      &payload.Role,
+		Verified:  &payload.Verified,
+	}
+
+	result = dbconn.DB.Model(&models.User{}).Where("id = ?", id).Updates(&updateUser)
+
+	if result.Error != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(models.ApiResponse(isSuccess, fiber.Map{"message": "Invalid email or password"}))
+	}
+
+	isSuccess = true
+	return c.Status(fiber.StatusOK).JSON(models.ApiResponse(isSuccess, fiber.Map{"data": gin.H{"user": models.FilterUserRecord(&updateUser)}}))
+}
+
+// Delete user by user id
+// @Description delete user by user id
+// @Summary Delete user by user id
+// @Tags User
+// @Accept json
+// @Produce json
+// @Success 200 {array} models.ResponseError "success"
+// @Failure 400 {object} models.ResponseError "Error"
+// @Router /users/delete/{id} [delete]
+func DeleteUserById(c *fiber.Ctx) error {
 	var isSuccess bool = false
 	id, err := uuid.Parse(c.Params("id"))
 	if err != nil {
@@ -143,4 +216,63 @@ func DeleteUser(c *fiber.Ctx) error {
 	}
 	isSuccess = true
 	return c.Status(fiber.StatusOK).JSON(fiber.Map{"status": "success", "message": "Delete user is success"})
+}
+
+// Update user password
+// @Description update user password
+// @Summary update user password
+// @Tags User
+// @Accept json
+// @Produce json
+// @Param Payload body models.UserPasswordUpdate true "Update user password"
+// @Success 200 {array} models.User
+// @Router /users/updatepassword/{id} [patch]
+func UpdateUserPasswordById(c *fiber.Ctx) error {
+	var isSuccess bool = false
+	var payload *models.UserPasswordUpdate
+	id, err := uuid.Parse(c.Params("id"))
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(models.ApiResponse(isSuccess, fiber.Map{"message": err.Error()}))
+	}
+
+	if err := c.BodyParser(&payload); err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(models.ApiResponse(isSuccess, fiber.Map{"message": err.Error()}))
+	}
+
+	errors := models.ValidateStruct(payload)
+	if errors != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(models.ApiResponse(isSuccess, fiber.Map{"message": errors}))
+	}
+
+	var oldUser models.User
+	result := dbconn.DB.First(&oldUser, "id = ?", id)
+	if result.RowsAffected == 0 {
+		return c.Status(fiber.StatusNotFound).JSON(models.ApiResponse(isSuccess, fiber.Map{"message": "the user ID is not found"}))
+	}
+
+	if err := utils.ComparePassword(oldUser.Password, payload.OldPassword); err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(models.ApiResponse(isSuccess, fiber.Map{"message": "Invalid Password"}))
+	}
+
+	var hashedPassword = utils.HashPassword(payload.NewPassword)
+
+	updateUser := models.User{
+		UserName:  oldUser.UserName,
+		FirstName: oldUser.FirstName,
+		LastName:  oldUser.LastName,
+		Email:     strings.ToLower(oldUser.Email),
+		Phone:     oldUser.Phone,
+		Password:  hashedPassword,
+		Role:      oldUser.Role,
+		Verified:  oldUser.Verified,
+	}
+
+	result = dbconn.DB.Model(&models.User{}).Where("id = ?", id).Updates(&updateUser)
+
+	if result.Error != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(models.ApiResponse(isSuccess, fiber.Map{"message": "Invalid email or password"}))
+	}
+
+	isSuccess = true
+	return c.Status(fiber.StatusOK).JSON(models.ApiResponse(isSuccess, fiber.Map{"data": gin.H{"user": models.FilterUserRecord(&updateUser)}}))
 }
