# backend/docs/swagger.yaml
@@ -115,6 +115,15 @@ definitions:
       verified:
         type: boolean
     type: object
+  models.UserPasswordUpdate:
+    properties:
+      confirmNewPassword:
+        type: string
+      newPassword:
+        type: string
+      oldPassword:
+        type: string
+    type: object
   models.UserResponse:
     properties:
       created_at:
@@ -307,7 +316,28 @@ paths:
             type: array
       summary: get user infomation by id
       tags:
-      - Uer
+      - User
+  /users/delete/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: delete user by user id
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            items:
+              $ref: '#/definitions/models.ResponseError'
+            type: array
+        "400":
+          description: Error
+          schema:
+            $ref: '#/definitions/models.ResponseError'
+      summary: Delete user by user id
+      tags:
+      - User
   /users/me:
     get:
       consumes:
@@ -348,7 +378,55 @@ paths:
             type: array
       summary: update user detail
       tags:
-      - Uer
+      - User
+  /users/update/{id}:
+    patch:
+      consumes:
+      - application/json
+      description: update user detail by user id
+      parameters:
+      - description: User Update Data
+        in: body
+        name: Payload
+        required: true
+        schema:
+          $ref: '#/definitions/models.UserUpdate'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.User'
+            type: array
+      summary: update user detail by user id
+      tags:
+      - User
+  /users/updatepassword/{id}:
+    patch:
+      consumes:
+      - application/json
+      description: update user password
+      parameters:
+      - description: Update user password
+        in: body
+        name: Payload
+        required: true
+        schema:
+          $ref: '#/definitions/models.UserPasswordUpdate'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.User'
+            type: array
+      summary: update user password
+      tags:
+      - User
 schemes:
 - http
 securityDefinitions:
